--- a/Homework1/resources/index.css
+++ b/Homework1/resources/index.css
@@ -1,1 +1,100 @@
 /* index.html jaoks */
+.container {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  max-width: 1000px;
+  padding: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+.post {
+  border-radius: 10px;
+  box-shadow: 5px 5px 20px gray;
+  background-color: white;
+  margin: 10px;
+  width: 100%;
+
+}
+
+.post-header {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+  align-items: center;
+
+}
+
+.post-header img {
+  width: 50px;
+}
+
+.post-header  p {
+  font-style: italic;
+}
+
+.profile_pic {
+  border-radius: 50%;
+}
+
+#header {
+  background-color: white;
+  margin: 0;
+  padding: 3px;
+  position: fixed;
+}
+
+nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav + div {
+  margin-top: 200px;
+}
+
+nav > img {
+  width: 30px;
+}
+
+nav div button {
+  background-color: cornflowerblue;
+  border-style: none;
+  color: white;
+  border-radius: 10px;
+}
+
+nav div button:hover {
+  background-color: darkcyan;
+}
+
+.post-content button {
+  background-color: blue;
+  color: transparent;
+  text-shadow: 0 0 0 white;
+  border-style: none;
+  width: 70px;
+  padding:5px;
+  border-radius: 5px;
+  margin: 5px;
+  font-size: 20px;
+}
+
+.post-content img {
+  width: 100%;
+}
+
+h3 {
+    margin: 5px;
+    font-weight: bold;
+    font-style: normal;
+    font-size: 200%;
+}
+
+img ~ h3 {
+  font-style: italic;
+  font-size: 100%;
+}
