--- a/Homework1/resources/index.css
+++ b/Homework1/resources/index.css
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   max-width: 1000px;
-  margin-top: 50px;
   padding: 20px;
   align-items: center;
   justify-content: center;
@@ -47,6 +46,10 @@ body {
   background-color: white;
   margin: 0;
   position: fixed;
+}
+
+#header + .container {
+  margin-top: 50px;
 }
 
 nav {
