--- a/Homework4/views/index.ejs
+++ b/Homework4/views/index.ejs
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework4</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <title>postIt</title>
   </head>
   <body>
-    <%= JSON.stringify(val) %>
+    <%- include('./partials/header.ejs') %>
   </body>
 </html>
