--- a/Homework4/views/singlepost.ejs
+++ b/Homework4/views/singlepost.ejs
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/index.css">
-    <title>Contact</title>
+    <title>Home page</title>
   </head>
   <body>
     <%- include('./partials/header.ejs') %>
-    Contact
+    Home
   </body>
 </html>
