--- a/Homework4/views/404.ejs
+++ b/Homework4/views/404.ejs
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/index.css">
-    <title>postIt</title>
+    <title>404</title>
   </head>
   <body>
-    <%- include('./partials/header.ejs') %>
+    404
   </body>
 </html>
