--- a/Homework4/views/posts.ejs
+++ b/Homework4/views/posts.ejs
@@ -13,16 +13,6 @@
     <%- include('./partials/header.ejs') %>
     <div class="posts">
       <% posts.forEach(post => { %>
-        <h3 class="title">
-        <%= post.title %>
-        </h3>
-        <p class="body">
-        <%= post.body %>
-        </p>
-        likes<p class="body">
-          <%= post.likes %>
-          </p>
-
         <div class="post">
           <div class="post-header">
             <h3><%= post.title %></h3>
@@ -33,7 +23,7 @@
             />
           </div>
           <div class="post-content">
-            <img src="<%= post.likes %>"/>
+            <img src="<%= post.url %>"/>
             <h3><%= post.body %></h3>
           </div>
           likes: <%= post.likes %>
