--- a/Homework4/public/css/posts.css
+++ b/Homework4/public/css/posts.css
@@ -1,12 +1,10 @@
-.post{
-    max-width: 700px;
-  }
 
 .posts {
   margin-top: 40px;
 }
 img {
 max-width: 600px;
+margin: auto;
 }
 
 .post {
@@ -14,6 +12,8 @@ max-width: 600px;
   box-shadow: 2px 5px 15px #cfcfcf;
   background-color: white;
   margin: 10px;
+  max-width: 700px;
+  min-width: 500px;
 }
 
 .post-header {
@@ -49,4 +49,7 @@ h3 {
 img ~ h3 {
   font-style: italic;
   font-size: 100%;
+}
+a {
+  all: unset;
 }
