--- a/Homework4/views/posts.ejs
+++ b/Homework4/views/posts.ejs
@@ -14,23 +14,9 @@
     <div class="posts">
       <% posts.forEach(post => { %>
         <a href="/singlepost/<%= post.id%>">
-          <div class="post">
-            <div class="post-header">
-              <h3><%= post.title %></h3>
-              <img
-                class="profile_pic"
-                src="https://miro.medium.com/max/256/0*vuQRIjTuwmZ7r6em.jpg"
-                alt="profiilikas"
-              />
-            </div>
-            <div class="post-content">
-              <img src="<%= post.url %>"/>
-              <h3><%= post.body %></h3>
-            </div>
-            likes: <%= post.likes %>
-          </div>
+          <%- include('partials/post', {post: post}); %>
         </a>
-        <% }) %>
+      <% }) %>
     </div>
   </body>
 </html>
