--- a/Homework4/public/css/style.css
+++ b/Homework4/public/css/style.css
@@ -3,3 +3,15 @@ body {
   background-color: #1778bd;
   margin: 0;
 }
+
+footer {
+  padding: 1rem 0.5rem;
+  width: calc(100% - 1rem);
+  display: flex;
+  justify-content: space-between;
+  background-color: #fff;
+}
+
+footer .link {
+  color: #1778bd;
+}
