--- a/Homework4/views/addnewpost.ejs
+++ b/Homework4/views/addnewpost.ejs
@@ -10,7 +10,7 @@
   </head>
   <body>
     <%- include('./partials/header.ejs') %>
-    <form action="/posts" method="POST" style="margin-top: 40px;">
+    <form action="/" method="POST" style="margin-top: 40px;">
       Title:<input name="title" style="width:100%"/><br>
       Body:<input name="body" style="width:100%"/><br>
       Image URL:<input name="url" style="width:100%"/><br>
