--- a/Homework4/views/partials/post.ejs
+++ b/Homework4/views/partials/post.ejs
@@ -1,7 +1,9 @@
 <% if (post) { %>
     <div class="post">
       <div class="post-header">
-        <h3><%= post.title %></h3>
+        <a href="/singlepost/<%= post.id %>">
+          <h3><%= post.title %></h3>
+        </a>
         <img
           class="profile_pic"
           src="https://miro.medium.com/max/256/0*vuQRIjTuwmZ7r6em.jpg"
@@ -9,9 +11,13 @@
         />
       </div>
       <div class="post-content">
-        <img src="<%= post.url %>"/>
+        <% if (post.url) { %>
+          <img src="<%= post.url %>"/>
+        <% } %>
         <h3><%= post.body %></h3>
       </div>
-      likes: <%= post.likes %>
+      <button class="like-button" onclick="like(<%= post.id %>)" id="like-btn-<%= post.id %>">
+        &#128077; <span><%= post.likes %></span>
+      </button>
     </div>
 <% } %>
