--- a/Homework4/views/partials/header.ejs
+++ b/Homework4/views/partials/header.ejs
@@ -1,6 +1,12 @@
 <nav id="header">
   <img src="https://p.kindpng.com/picc/s/77-774135_clip-art-letters-logo-designs-logo-design-free.png" alt="logo">
   <div>
+    <button onclick="document.location.href='/'">Feed</button>
+  </div>
+  <div>
+    <button onclick="document.location.href='/addnewpost'">Add new post</button>
+  </div>
+  <div>
     <input type="text" name="searchTerm" id="searchTerm" value="" placeholder="search...">
     <button>Search</button>
   </div>
