--- a/Homework4/public/css/posts.css
+++ b/Homework4/public/css/posts.css
@@ -1,11 +1,3 @@
-.posts {
-  margin-top: 40px;
-}
-img {
-  max-width: 600px;
-  margin: auto;
-}
-
 .post {
   border-radius: 10px;
   box-shadow: 2px 5px 15px #cfcfcf;
@@ -13,7 +5,7 @@ img {
   margin: 10px;
   padding: 10px;
   max-width: 700px;
-  min-width: 500px;
+  min-width: 700px;
 }
 
 .post-header {
@@ -35,7 +27,7 @@ img {
   border-radius: 50%;
 }
 
-.post-content img {
+.post_img {
   width: 100%;
 }
 
