--- a/Homework4/views/addnewpost.ejs
+++ b/Homework4/views/addnewpost.ejs
@@ -11,12 +11,14 @@
   </head>
   <body>
     <%- include('./partials/header.ejs') %>
-    <form action="/" method="POST" style="margin-top: 40px;">
-      Title:<input name="title" style="width:100%"/><br>
-      Body:<input name="body" style="width:100%"/><br>
-      Image URL:<input name="url" style="width:100%"/><br>
-      <input type="submit" value="submit"/>
-    </form>
+    <div class="container">
+      <form action="/" method="POST">
+        Title:<input name="title" style="width:100%"/><br>
+        Body:<input name="body" style="width:100%"/><br>
+        Image URL:<input name="url" style="width:100%"/><br>
+        <input type="submit" value="submit"/>
+      </form>
+    </div>
   </body>
 
   <script>
