--- a/Homework4/views/posts.ejs
+++ b/Homework4/views/posts.ejs
@@ -12,7 +12,7 @@
   </head>
   <body>
     <%- include('./partials/header.ejs') %>
-    <div class="posts">
+    <div class="container">
       <% if (posts.length > 0) { %>
         <% posts.forEach(post => { %>
           <%- include('partials/post', {post: post}); %>
