--- a/Homework4/views/partials/post.ejs
+++ b/Homework4/views/partials/post.ejs
@@ -9,7 +9,7 @@
       </div>
       <div class="post-content">
         <% if (post.url) { %> 
-          <img src="<%= post.url %>" />
+          <img class="post_img" src="<%= post.url %>" />
           <% } %>
             <h3>
               <%= post.body %>
