--- a/Homework4/views/addnewpost.ejs
+++ b/Homework4/views/addnewpost.ejs
@@ -7,19 +7,21 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/posts.css">
+    <link rel="stylesheet" href="/css/addpost.css">
+
     <title>New post</title>
   </head>
   <body>
     <%- include('./partials/header.ejs') %>
-    <form action="/" method="POST" style="margin-top: 40px;">
-      Title:<input name="title" style="width:100%"/><br>
-      Body:<input name="body" style="width:100%"/><br>
-      Image URL:<input name="url" style="width:100%"/><br>
-      <input type="submit" value="submit"/>
-    </form>
+    <div class="newPostForm">
+      <form action="/" method="POST" style="margin-top: 40px;">
+        Title:<input name="title" style="width:100%"/><br>
+        Body:<input name="body" style="width:100%"/><br>
+        Image URL:<input name="url" style="width:100%"/><br>
+        <input type="submit" value="submit"/>
+      </form>
+    </div>
   </body>
+  <%- include('./partials/footer.ejs') %>
 
-  <script>
-
-  </script>
 </html>
