--- a/Homework4/views/404.ejs
+++ b/Homework4/views/404.ejs
@@ -9,6 +9,6 @@
     <title>404</title>
   </head>
   <body>
-    404
+    Error 404. The page you are trying to view does not exist.
   </body>
 </html>
