--- a/Homework4/views/addnewpost.ejs
+++ b/Homework4/views/addnewpost.ejs
@@ -18,7 +18,7 @@
         Title:<input name="title" style="width:100%"/><br>
         Body:<input name="body" style="width:100%"/><br>
         Image URL:<input name="url" style="width:100%"/><br>
-        <input type="submit" value="submit"/>
+        <input type="submit" value="Add new post"/>
       </form>
     </div>
   </body>
